--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,6 +40,9 @@
 						
 					</div>
 					<button type="submit" class="btn btn-primary btn-lg btn-block"  style="width: 350px; position: relative;top: 45px;">登录</button>
+					<div style="weight:350px;position:relative;top: 50px">
+						<input type="checkbox" name="remeber" value="1">一个月内自动登录
+					</div>
 				</div>
 			</form>
 		</div>
